@@ -1,3 +1,9 @@
+@deco1(dval1)
+@deco2(dval2)
+@deco3(
+    dval3,
+    dval4
+)
 def func1(
     arg1: int = 3,
     arg2: Class1 = val1,
