@@ -126,6 +126,10 @@ Release date: TBA
 
   * Emit ``consider-using-tuple`` even if list contains a ``starred`` expression.
 
+* Ignore decorators lines by similarities checker when ignore signatures flag enabled
+
+  Closes #4839
+
 
 What's New in Pylint 2.9.6?
 ===========================
